Semi-automatic warning fixing